jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec: 
  selector: 
    app: jenkins
  ports:
  - protocol: TCP
    port: 8080
