jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  tls:
  - hosts:
    - <domain>
    secretName: <secret name>
  rules:
  - host: <domain>
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
